ocaml-3.10.2-patched_x86_64/ocamldoc/odoc_text_parser.output
   0  $accept : %entry% $end

   1  main : text EOF
   2       | EOF

   3  text : text_element_list

   4  text_element_list : text_element
   5                    | text_element text_element_list

   6  text_element : Title text END
   7               | BOLD text END
   8               | ITALIC text END
   9               | CUSTOM text END
  10               | EMP text END
  11               | SUPERSCRIPT text END
  12               | SUBSCRIPT text END
  13               | CENTER text END
  14               | LEFT text END
  15               | RIGHT text END
  16               | LIST list END
  17               | ENUM list END
  18               | CODE string END_CODE
  19               | CODE_PRE string END_CODE_PRE
  20               | ELE_REF string END
  21               | VAL_REF string END
  22               | TYP_REF string END
  23               | EXC_REF string END
  24               | MOD_REF string END
  25               | MODT_REF string END
  26               | CLA_REF string END
  27               | CLT_REF string END
  28               | ATT_REF string END
  29               | MET_REF string END
  30               | SEC_REF string END
  31               | MOD_LIST_REF string END
  32               | INDEX_LIST
  33               | VERB string END_VERB
  34               | LATEX string END_LATEX
  35               | LINK string END text END
  36               | BLANK_LINE
  37               | BEGIN_SHORTCUT_LIST_ITEM shortcut_list END_SHORTCUT_LIST
  38               | BEGIN_SHORTCUT_LIST_ITEM shortcut_list EOF
  39               | BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum END_SHORTCUT_LIST
  40               | BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum EOF
  41               | string

  42  list : string
  43       | string list
  44       | list string
  45       | item
  46       | item list

  47  item : ITEM text END

  48  shortcut_list : text shortcut_list2
  49                | text

  50  shortcut_list2 : SHORTCUT_LIST_ITEM shortcut_list

  51  shortcut_enum : text shortcut_enum2
  52                | text

  53  shortcut_enum2 : SHORTCUT_ENUM_ITEM shortcut_enum

  54  string : Char
  55         | Char string

  56  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (56)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	EOF  shift 36
	Char  shift 37
	.  error

	main  goto 38
	text  goto 39
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	text_element : Title . text END  (6)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 43
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 4
	text_element : BOLD . text END  (7)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 44
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 5
	text_element : EMP . text END  (10)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 45
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 6
	text_element : CENTER . text END  (13)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 46
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 7
	text_element : LEFT . text END  (14)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 47
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 8
	text_element : RIGHT . text END  (15)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 48
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 9
	text_element : ITALIC . text END  (8)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 49
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 10
	text_element : CUSTOM . text END  (9)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 50
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 11
	text_element : LIST . list END  (16)

	ITEM  shift 51
	Char  shift 37
	.  error

	list  goto 52
	string  goto 53
	item  goto 54


state 12
	text_element : ENUM . list END  (17)

	ITEM  shift 51
	Char  shift 37
	.  error

	list  goto 55
	string  goto 53
	item  goto 54


state 13
	text_element : LINK . string END text END  (35)

	Char  shift 37
	.  error

	string  goto 56


state 14
	text_element : CODE . string END_CODE  (18)

	Char  shift 37
	.  error

	string  goto 57


state 15
	text_element : CODE_PRE . string END_CODE_PRE  (19)

	Char  shift 37
	.  error

	string  goto 58


state 16
	text_element : VERB . string END_VERB  (33)

	Char  shift 37
	.  error

	string  goto 59


state 17
	text_element : LATEX . string END_LATEX  (34)

	Char  shift 37
	.  error

	string  goto 60


state 18
	text_element : ELE_REF . string END  (20)

	Char  shift 37
	.  error

	string  goto 61


state 19
	text_element : VAL_REF . string END  (21)

	Char  shift 37
	.  error

	string  goto 62


state 20
	text_element : TYP_REF . string END  (22)

	Char  shift 37
	.  error

	string  goto 63


state 21
	text_element : EXC_REF . string END  (23)

	Char  shift 37
	.  error

	string  goto 64


state 22
	text_element : MOD_REF . string END  (24)

	Char  shift 37
	.  error

	string  goto 65


state 23
	text_element : MODT_REF . string END  (25)

	Char  shift 37
	.  error

	string  goto 66


state 24
	text_element : CLA_REF . string END  (26)

	Char  shift 37
	.  error

	string  goto 67


state 25
	text_element : CLT_REF . string END  (27)

	Char  shift 37
	.  error

	string  goto 68


state 26
	text_element : ATT_REF . string END  (28)

	Char  shift 37
	.  error

	string  goto 69


state 27
	text_element : MET_REF . string END  (29)

	Char  shift 37
	.  error

	string  goto 70


state 28
	text_element : SEC_REF . string END  (30)

	Char  shift 37
	.  error

	string  goto 71


state 29
	text_element : MOD_LIST_REF . string END  (31)

	Char  shift 37
	.  error

	string  goto 72


state 30
	text_element : INDEX_LIST .  (32)

	.  reduce 32


state 31
	text_element : SUPERSCRIPT . text END  (11)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 73
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 32
	text_element : SUBSCRIPT . text END  (12)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 74
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 33
	text_element : BEGIN_SHORTCUT_LIST_ITEM . shortcut_list END_SHORTCUT_LIST  (37)
	text_element : BEGIN_SHORTCUT_LIST_ITEM . shortcut_list EOF  (38)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 75
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42
	shortcut_list  goto 76


state 34
	text_element : BEGIN_SHORTCUT_ENUM_ITEM . shortcut_enum END_SHORTCUT_LIST  (39)
	text_element : BEGIN_SHORTCUT_ENUM_ITEM . shortcut_enum EOF  (40)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 77
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42
	shortcut_enum  goto 78


state 35
	text_element : BLANK_LINE .  (36)

	.  reduce 36


state 36
	main : EOF .  (2)

	.  reduce 2


37: shift/reduce conflict (shift 37, reduce 54) on Char
state 37
	string : Char .  (54)
	string : Char . string  (55)

	Char  shift 37
	END  reduce 54
	Title  reduce 54
	BOLD  reduce 54
	EMP  reduce 54
	CENTER  reduce 54
	LEFT  reduce 54
	RIGHT  reduce 54
	ITALIC  reduce 54
	CUSTOM  reduce 54
	LIST  reduce 54
	ENUM  reduce 54
	ITEM  reduce 54
	LINK  reduce 54
	CODE  reduce 54
	END_CODE  reduce 54
	CODE_PRE  reduce 54
	END_CODE_PRE  reduce 54
	VERB  reduce 54
	END_VERB  reduce 54
	LATEX  reduce 54
	END_LATEX  reduce 54
	ELE_REF  reduce 54
	VAL_REF  reduce 54
	TYP_REF  reduce 54
	EXC_REF  reduce 54
	MOD_REF  reduce 54
	MODT_REF  reduce 54
	CLA_REF  reduce 54
	CLT_REF  reduce 54
	ATT_REF  reduce 54
	MET_REF  reduce 54
	SEC_REF  reduce 54
	MOD_LIST_REF  reduce 54
	INDEX_LIST  reduce 54
	SUPERSCRIPT  reduce 54
	SUBSCRIPT  reduce 54
	BEGIN_SHORTCUT_LIST_ITEM  reduce 54
	BEGIN_SHORTCUT_ENUM_ITEM  reduce 54
	SHORTCUT_LIST_ITEM  reduce 54
	SHORTCUT_ENUM_ITEM  reduce 54
	END_SHORTCUT_LIST  reduce 54
	BLANK_LINE  reduce 54
	EOF  reduce 54

	string  goto 79


state 38
	%entry% : '\001' main .  (56)

	.  reduce 56


state 39
	main : text . EOF  (1)

	EOF  shift 80
	.  error


state 40
	text : text_element_list .  (3)

	.  reduce 3


state 41
	text_element_list : text_element .  (4)
	text_element_list : text_element . text_element_list  (5)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	END  reduce 4
	SHORTCUT_LIST_ITEM  reduce 4
	SHORTCUT_ENUM_ITEM  reduce 4
	END_SHORTCUT_LIST  reduce 4
	EOF  reduce 4

	text_element_list  goto 81
	text_element  goto 41
	string  goto 42


state 42
	text_element : string .  (41)

	.  reduce 41


state 43
	text_element : Title text . END  (6)

	END  shift 82
	.  error


state 44
	text_element : BOLD text . END  (7)

	END  shift 83
	.  error


state 45
	text_element : EMP text . END  (10)

	END  shift 84
	.  error


state 46
	text_element : CENTER text . END  (13)

	END  shift 85
	.  error


state 47
	text_element : LEFT text . END  (14)

	END  shift 86
	.  error


state 48
	text_element : RIGHT text . END  (15)

	END  shift 87
	.  error


state 49
	text_element : ITALIC text . END  (8)

	END  shift 88
	.  error


state 50
	text_element : CUSTOM text . END  (9)

	END  shift 89
	.  error


state 51
	item : ITEM . text END  (47)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 90
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 52
	text_element : LIST list . END  (16)
	list : list . string  (44)

	END  shift 91
	Char  shift 37
	.  error

	string  goto 92


53: shift/reduce conflict (shift 37, reduce 42) on Char
state 53
	list : string .  (42)
	list : string . list  (43)

	ITEM  shift 51
	Char  shift 37
	END  reduce 42

	list  goto 93
	string  goto 53
	item  goto 54


54: shift/reduce conflict (shift 37, reduce 45) on Char
state 54
	list : item .  (45)
	list : item . list  (46)

	ITEM  shift 51
	Char  shift 37
	END  reduce 45

	list  goto 94
	string  goto 53
	item  goto 54


state 55
	text_element : ENUM list . END  (17)
	list : list . string  (44)

	END  shift 95
	Char  shift 37
	.  error

	string  goto 92


state 56
	text_element : LINK string . END text END  (35)

	END  shift 96
	.  error


state 57
	text_element : CODE string . END_CODE  (18)

	END_CODE  shift 97
	.  error


state 58
	text_element : CODE_PRE string . END_CODE_PRE  (19)

	END_CODE_PRE  shift 98
	.  error


state 59
	text_element : VERB string . END_VERB  (33)

	END_VERB  shift 99
	.  error


state 60
	text_element : LATEX string . END_LATEX  (34)

	END_LATEX  shift 100
	.  error


state 61
	text_element : ELE_REF string . END  (20)

	END  shift 101
	.  error


state 62
	text_element : VAL_REF string . END  (21)

	END  shift 102
	.  error


state 63
	text_element : TYP_REF string . END  (22)

	END  shift 103
	.  error


state 64
	text_element : EXC_REF string . END  (23)

	END  shift 104
	.  error


state 65
	text_element : MOD_REF string . END  (24)

	END  shift 105
	.  error


state 66
	text_element : MODT_REF string . END  (25)

	END  shift 106
	.  error


state 67
	text_element : CLA_REF string . END  (26)

	END  shift 107
	.  error


state 68
	text_element : CLT_REF string . END  (27)

	END  shift 108
	.  error


state 69
	text_element : ATT_REF string . END  (28)

	END  shift 109
	.  error


state 70
	text_element : MET_REF string . END  (29)

	END  shift 110
	.  error


state 71
	text_element : SEC_REF string . END  (30)

	END  shift 111
	.  error


state 72
	text_element : MOD_LIST_REF string . END  (31)

	END  shift 112
	.  error


state 73
	text_element : SUPERSCRIPT text . END  (11)

	END  shift 113
	.  error


state 74
	text_element : SUBSCRIPT text . END  (12)

	END  shift 114
	.  error


state 75
	shortcut_list : text . shortcut_list2  (48)
	shortcut_list : text .  (49)

	SHORTCUT_LIST_ITEM  shift 115
	END_SHORTCUT_LIST  reduce 49
	EOF  reduce 49

	shortcut_list2  goto 116


state 76
	text_element : BEGIN_SHORTCUT_LIST_ITEM shortcut_list . END_SHORTCUT_LIST  (37)
	text_element : BEGIN_SHORTCUT_LIST_ITEM shortcut_list . EOF  (38)

	END_SHORTCUT_LIST  shift 117
	EOF  shift 118
	.  error


state 77
	shortcut_enum : text . shortcut_enum2  (51)
	shortcut_enum : text .  (52)

	SHORTCUT_ENUM_ITEM  shift 119
	END_SHORTCUT_LIST  reduce 52
	EOF  reduce 52

	shortcut_enum2  goto 120


state 78
	text_element : BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum . END_SHORTCUT_LIST  (39)
	text_element : BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum . EOF  (40)

	END_SHORTCUT_LIST  shift 121
	EOF  shift 122
	.  error


state 79
	string : Char string .  (55)

	.  reduce 55


state 80
	main : text EOF .  (1)

	.  reduce 1


state 81
	text_element_list : text_element text_element_list .  (5)

	.  reduce 5


state 82
	text_element : Title text END .  (6)

	.  reduce 6


state 83
	text_element : BOLD text END .  (7)

	.  reduce 7


state 84
	text_element : EMP text END .  (10)

	.  reduce 10


state 85
	text_element : CENTER text END .  (13)

	.  reduce 13


state 86
	text_element : LEFT text END .  (14)

	.  reduce 14


state 87
	text_element : RIGHT text END .  (15)

	.  reduce 15


state 88
	text_element : ITALIC text END .  (8)

	.  reduce 8


state 89
	text_element : CUSTOM text END .  (9)

	.  reduce 9


state 90
	item : ITEM text . END  (47)

	END  shift 123
	.  error


state 91
	text_element : LIST list END .  (16)

	.  reduce 16


state 92
	list : list string .  (44)

	.  reduce 44


93: shift/reduce conflict (shift 37, reduce 43) on Char
state 93
	list : string list .  (43)
	list : list . string  (44)

	Char  shift 37
	END  reduce 43

	string  goto 92


94: shift/reduce conflict (shift 37, reduce 46) on Char
state 94
	list : list . string  (44)
	list : item list .  (46)

	Char  shift 37
	END  reduce 46

	string  goto 92


state 95
	text_element : ENUM list END .  (17)

	.  reduce 17


state 96
	text_element : LINK string END . text END  (35)

	Title  shift 3
	BOLD  shift 4
	EMP  shift 5
	CENTER  shift 6
	LEFT  shift 7
	RIGHT  shift 8
	ITALIC  shift 9
	CUSTOM  shift 10
	LIST  shift 11
	ENUM  shift 12
	LINK  shift 13
	CODE  shift 14
	CODE_PRE  shift 15
	VERB  shift 16
	LATEX  shift 17
	ELE_REF  shift 18
	VAL_REF  shift 19
	TYP_REF  shift 20
	EXC_REF  shift 21
	MOD_REF  shift 22
	MODT_REF  shift 23
	CLA_REF  shift 24
	CLT_REF  shift 25
	ATT_REF  shift 26
	MET_REF  shift 27
	SEC_REF  shift 28
	MOD_LIST_REF  shift 29
	INDEX_LIST  shift 30
	SUPERSCRIPT  shift 31
	SUBSCRIPT  shift 32
	BEGIN_SHORTCUT_LIST_ITEM  shift 33
	BEGIN_SHORTCUT_ENUM_ITEM  shift 34
	BLANK_LINE  shift 35
	Char  shift 37
	.  error

	text  goto 124
	text_element_list  goto 40
	text_element  goto 41
	string  goto 42


state 97
	text_element : CODE string END_CODE .  (18)

	.  reduce 18


state 98
	text_element : CODE_PRE string END_CODE_PRE .  (19)

	.  reduce 19


state 99
	text_element : VERB string END_VERB .  (33)

	.  reduce 33


state 100
	text_element : LATEX string END_LATEX .  (34)

	.  reduce 34


state 101
	text_element : ELE_REF string END .  (20)

	.  reduce 20


state 102
	text_element : VAL_REF string END .  (21)

	.  reduce 21


state 103
	text_element : TYP_REF string END .  (22)

	.  reduce 22


state 104
	text_element : EXC_REF string END .  (23)

	.  reduce 23


state 105
	text_element : MOD_REF string END .  (24)

	.  reduce 24


state 106
	text_element : MODT_REF string END .  (25)

	.  reduce 25


state 107
	text_element : CLA_REF string END .  (26)

	.  reduce 26


state 108
	text_element : CLT_REF string END .  (27)

	.  reduce 27


state 109
	text_element : ATT_REF string END .  (28)

	.  reduce 28


state 110
	text_element : MET_REF string END .  (29)

	.  reduce 29


state 111
	text_element : SEC_REF string END .  (30)

	.  reduce 30


state 112
	text_element : MOD_LIST_REF string END .  (31)

	.  reduce 31


state 113
	text_element : SUPERSCRIPT text END .  (11)

	.  reduce 11


state 114
	text_element : SUBSCRIPT text END .  (12)

	.  reduce 12


state 115
	shortcut_list2 : SHORTCUT_LIST_ITEM . shortcut_list  (50)
